changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Automatic strip of trailing whitespaces. This stripped a trailing whitespace in
ChangeLog, that is why ChangeLog is listed too.
 ChangeLog
 make_win32/plugin_python/plugin_python.rc
 make_win32/plugin_anim/plugin_anim.dsp
 make_win32/crossfire.rc
 make_win32/plugin_common/plugin_common.dsp
 make_win32/INSTALL_WIN32.txt
 make_win32/Release_notes.txt
Arvid Norlander 2008-09-02

Small code fixes found using GCC compiler warnings (bad format strings,
unreachable return, missing return, unclear {} in a #define when used in a if.)
 include/global.h
 socket/item.c
 socket/loop.c
 socket/metaserver.c
 server/shop.c
 server/swap.c
 server/spell_util.c
 server/resurrection.c
 server/server.c
 server/login.c
 server/c_wiz.c
Arvid Norlander 2008-09-02

Added %a in the default format string for the 'who' command, because the
'afk' command is useless if nobody can see the AFK status of players who
use it.
 lib/settings
Raphaël Quinet 2008-08-27

Inform other party members when a player leaves a party by joining or
creating another party, not only when the player uses "party leave".
 server/c_party.c
Raphaël Quinet 2008-08-25

Some plugin-related fixes.
 server/c_object.c: EVENT_DROP should be called before the item is removed,
  else can't prevent dropping.
 server/monster.c: enable items in player/npc's inventory to react, too
Nicolas Weeger 2008-08-16

Added new subtype 4 ST_MAT_WINDOW for building materials.  This allows the
player to build windows in existing walls (if these walls have a corresponding
window archetype).  Fixed an issue in apply_builder_floor() that could cause a